--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1> Hello Coursera my name is peaches</h1>
+<h1> Hello Courseras</h1>
 </body>
 </html>
